--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop": "gatsby develop -o",
+    "start": "gatsby clean && gatsby develop -o",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -17,14 +17,19 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.17.2",
     "gatsby-plugin-google-analytics": "^4.17.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-react-helmet": "^5.17.0",
+    "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-styled-components": "^5.17.0",
+    "gatsby-source-filesystem": "^4.17.0",
     "gatsby-source-sanity": "^7.4.2",
+    "gatsby-transformer-sharp": "^4.17.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
