--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.25",
     "typescript": "^4.7.4"
   }
 }
