--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-source-filesystem": "^4.17.0",
-    "gatsby-source-sanity": "^7.4.2",
     "gatsby-transformer-sharp": "^4.17.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -36,6 +35,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/facebook-js-sdk": "^3.3.5",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
